force-app/main/default/objects/RC_employees__c/RC_employees__c.object-meta.xml
<CustomObject>
    <label>RC_employees</label>
    <nameField>
        <label>RC_employees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RC_employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>