force-app/main/default/objects/RC_employees__c/fields/employee_company_id__c.field-meta.xml
<CustomField>
    <fullName>employee_company_id__c</fullName>
    <description>Employee id given by their company</description>
    <label>employee_company_id</label>
    <type>TextArea</type>
</CustomField>