force-app/main/default/objects/RC_employees__c/fields/employee_id__c.field-meta.xml
<CustomField>
    <fullName>employee_id__c</fullName>
    <description>Salesforce generated record id</description>
    <label>employee_id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>