force-app/main/default/objects/RC_employees__c/fields/employee_name__c.field-meta.xml
<CustomField>
    <fullName>employee_name__c</fullName>
    <label>employee_name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>