force-app/main/default/objects/RC_employees__c/fields/RC_event__c.field-meta.xml
<CustomField>
    <fullName>RC_event__c</fullName>
    <label>RC_event</label>
    <referenceTo>RC_event__c</referenceTo>
    <relationshipLabel>RC_employees</relationshipLabel>
    <relationshipName>RC_employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>